--- a/src/AaxAudioConverter/MainForm.de.resx
+++ b/src/AaxAudioConverter/MainForm.de.resx
@@ -145,19 +145,22 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACI
-        AgAAAk1TRnQBSQFMAgEBAgIAAQEBAAEBARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
-        ARADAAEBAQABIAYAARD/AP8AbAADAwEEAzwBZgMzAVPwAAMdASkBWgFdAVoBygEAAWMBCgH/AQABYwEK
-        Af8DIwE05wABAQNAAXABRwFiAUgB9gEAAWMBCgH/AQABYwEKAf8BAAFjAQoB/wFSAVQBUgGm5AABMAEx
-        ATABTQEAAWMBCgH/AQABYwEKAf8BHAFjASsB/AFaAV8BWgHbAQABYwEKAf8BIQFfAScB+wMWAR7gAAMf
-        AS0BWQFnAVkB8gFeAWEBXgHaAycBOwEhAiIBMQEAAWMBCgH/AQABYwEKAf8DSgGM5AADBQEHAwIBAwgA
-        AVYBWQFWAb4BAAFjAQoB/wFOAV0BTgHwAwoBDvAAAzABTAEAAWMBCgH/AQABYwEKAf8DQAFx8wABAQFZ
-        AV0BWQHXAQABYwEKAf8BVwFcAVcB3wMDAQTwAAE8AT0BPAFnAQABYwEKAf8BAAFjAQoB/wM1AVbwAAMH
-        AQkBVQFcAVUB6gEAAWMBCgH/A1sByPQAAUYBRwFGAYEBAAFjAQoB/wEAAWMBCgH/AyQBNvAAAxEBFwFO
-        AV0BTgHwASEBXwEnAfsDIAEv9AADEgQYASH/AI0AAUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEB
-        BQABgBcAA/8BAAT/BAAE/wQAAv8B/AF/BAAC/wH4AT8EAAL/AeABPwQAAv8B4AEfBAAC/wHgAR8EAAL/
-        AfMBDwQAA/8BDwQAA/8BBwQAA/8BhwQAA/8BhwQAA/8BwwQAA/8BwwQAA/8B5wQABP8EAAs=
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACK
+        AgAAAk1TRnQBSQFMAgEBAgEAAQgBAQEIAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEP8A/wBsAAMDAQQDPAFmAzMBU/AAAx0BKQFaAV0BWgHKAQABYgEJAf8BAAFi
+        AQkB/wMjATTnAAEBA0ABcAFIAWIBSAH2AQABYgEJAf8BAAFiAQkB/wEAAWIBCQH/AVIBVAFSAabkAAEw
+        ATEBMAFNAQABYgEJAf8BAAFiAQkB/wEdAWIBKwH8AVoBXwFaAdsBAAFiAQkB/wEhAV8BJwH7AxYBHuAA
+        Ax8BLQFZAWcBWQHyAV4BYQFeAdoDJwE7ASECIgExAQABYgEJAf8BAAFiAQkB/wNKAYzkAAMFAQcDAgED
+        CAABVgFZAVYBvgEAAWIBCQH/AU4BXQFOAfADCgEO8AADMAFMAQABYgEJAf8BAAFiAQkB/wNAAXHzAAEB
+        AVkBXQFZAdcBAAFiAQkB/wFXAVwBVwHfAwMBBPAAATwBPQE8AWcBAAFiAQkB/wEAAWIBCQH/AzUBVvAA
+        AwcBCQFVAVwBVQHqAQABYgEJAf8DWwHI9AABRgFHAUYBgQEAAWIBCQH/AQABYgEJAf8DJAE28AADEQEX
+        AU4BXQFOAfABIQFfAScB+wMgAS/0AAMSBBgBIf8AjQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEA
+        AQEFAAGAFwAD/wEABP8EAAT/BAAC/wH8AX8EAAL/AfgBPwQAAv8B4AE/BAAC/wHgAR8EAAL/AeABHwQA
+        Av8B8wEPBAAD/wEPBAAD/wEHBAAD/wGHBAAD/wGHBAAD/wHDBAAD/wHDBAAD/wHnBAAE/wQACw==
 </value>
+  </data>
+  <data name="listViewAaxFiles.ToolTip" xml:space="preserve">
+    <value />
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnRem.Size" type="System.Drawing.Size, System.Drawing">
@@ -184,6 +187,9 @@ und zu Liste hinzufügen.
   <data name="grpBoxAaxFiles.Text" xml:space="preserve">
     <value>AAX-Dateien</value>
   </data>
+  <data name="grpBoxAaxFiles.ToolTip" xml:space="preserve">
+    <value />
+  </data>
   <data name="lblDuration.Location" type="System.Drawing.Point, System.Drawing">
     <value>162, 10</value>
   </data>
@@ -193,11 +199,17 @@ und zu Liste hinzufügen.
   <data name="lblDuration.Text" xml:space="preserve">
     <value>Minuten</value>
   </data>
+  <data name="lblDuration.ToolTip" xml:space="preserve">
+    <value />
+  </data>
   <data name="lblTraclLen.Size" type="System.Drawing.Size, System.Drawing">
     <value>105, 13</value>
   </data>
   <data name="lblTraclLen.Text" xml:space="preserve">
     <value>Länge je Stück etwa</value>
+  </data>
+  <data name="lblTraclLen.ToolTip" xml:space="preserve">
+    <value />
   </data>
   <data name="numUpDnTrkLen.Location" type="System.Drawing.Point, System.Drawing">
     <value>117, 6</value>
@@ -210,6 +222,9 @@ und verfügbaren Stille-Intervallen.</value>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="panelTrkLen.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
+  </data>
+  <data name="panelTrkLen.ToolTip" xml:space="preserve">
+    <value />
   </data>
   <data name="radBtnTimeSplit.Size" type="System.Drawing.Size, System.Drawing">
     <value>301, 17</value>
@@ -260,6 +275,9 @@ mit Wiedergabeliste bei mehrteiligen Büchern.</value>
   <data name="grpBoxMode.Text" xml:space="preserve">
     <value>Modus</value>
   </data>
+  <data name="grpBoxMode.ToolTip" xml:space="preserve">
+    <value />
+  </data>
   <data name="lblProgress.ToolTip" xml:space="preserve">
     <value>Schrittweiser Fortschritt.
 Anzahl Schritte kann sich während der Bearbeitung erhöhen.
@@ -296,11 +314,20 @@ Momentan bearbeitete Kapitel.
   <data name="btnConvert.ToolTip" xml:space="preserve">
     <value>Konvertierung starten.</value>
   </data>
+  <data name="panelExec.ToolTip" xml:space="preserve">
+    <value />
+  </data>
   <data name="radBtnM4a.ToolTip" xml:space="preserve">
-    <value>Originäres MP4/AAC Audio kopieren (sehr schnell).</value>
+    <value>Originäres MP4/AAC Audio kopieren (sehr schnell).
+
+Dateityp ist entweder .m4a oder .m4b, bei identischem Inhalt.
+Typ kann in den Grundeinstellungen geändert werden.</value>
   </data>
   <data name="radBtnMp3.ToolTip" xml:space="preserve">
     <value>Zu MP3 umwandeln.</value>
+  </data>
+  <data name="grpBoxFormat.ToolTip" xml:space="preserve">
+    <value />
   </data>
   <data name="btnSaveTo.Size" type="System.Drawing.Size, System.Drawing">
     <value>85, 23</value>
@@ -313,6 +340,9 @@ Momentan bearbeitete Kapitel.
 Bücher werden nach Autor und Titel sortiert. 
 </value>
   </data>
+  <data name="propGridNaming.ToolTip" xml:space="preserve">
+    <value />
+  </data>
   <data name="grpBoxNaming.Text" xml:space="preserve">
     <value>Namensgebung</value>
   </data>
@@ -320,11 +350,23 @@ Bücher werden nach Autor und Titel sortiert.
     <value>Verschiedene Einstellungen zur Namensgebung 
 für Tags, Ordner und Dateien.</value>
   </data>
+  <data name="lblSaveTo.ToolTip" xml:space="preserve">
+    <value />
+  </data>
   <data name="grpBoxDest.Text" xml:space="preserve">
     <value>Zielordner</value>
   </data>
-  <data name="contextMenuStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>176, 48</value>
+  <data name="grpBoxDest.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="panelSettingsLeft.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="tableLayoutSettings.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="panelTop.ToolTip" xml:space="preserve">
+    <value />
   </data>
   <data name="tsmiDetails.Size" type="System.Drawing.Size, System.Drawing">
     <value>175, 22</value>
@@ -337,6 +379,12 @@ für Tags, Ordner und Dateien.</value>
   </data>
   <data name="tsmiPreview.Text" xml:space="preserve">
     <value>Vorschau / Anpassen</value>
+  </data>
+  <data name="contextMenuStrip1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>176, 48</value>
+  </data>
+  <data name="contextMenuStrip1.ToolTip" xml:space="preserve">
+    <value />
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -593,5 +641,8 @@ für Tags, Ordner und Dateien.</value>
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAH//rEH//6xBAACsQQAArEEAAKxBAACsQQAArEEAAKxBAACsQQAA
         rEEAAKxBAACsQQAArEHv/6xB//+sQf//rEE=
 </value>
+  </data>
+  <data name="$this.ToolTip" xml:space="preserve">
+    <value />
   </data>
 </root>
